# ecos-studio

./: .bazelrc  .gitignore  .gitmodules  BUILD.bazel  Dockerfile.verify  MODULE.bazel  Makefile  README.md  flake.nix  plan_exec.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: cliff.toml
.github/actions/check-version/: action.yml
.github/actions/install-tauri-linux-deps/: action.yml
.github/actions/setup-node-pnpm/: action.yml
.github/actions/setup-rust-cache/: action.yml
.github/scripts/: check-version.py
.github/workflows/: auto-tag.yml  ci.yml  lint.yml  release.yml
docs/: paper-scratch.txt  server-dev.md
ecos/: BUILD.bazel  README.md  build-gui.sh  prepare-ecos-server.sh
ecos/docs/: FAQ.md  user-guide.md
ecos/gui/: .gitignore  README.md  default.nix  package.json  pnpm-lock.yaml  vite.config.ts
ecos/gui/scripts/: gen-mock-tiles.ts
ecos/gui/src/: App.vue  env.d.ts
ecos/gui/src-tauri/: Cargo.toml  tauri.conf.json
ecos/gui/src-tauri/capabilities/: migrated.json
ecos/gui/src-tauri/src/: api_server.rs  gen_layout_tiles.rs  main.rs  project_scope.rs  tile_cache.rs  window_commands.rs
ecos/gui/src/api/: agent.test.ts  agent.ts  client.ts  index.ts  type.ts  workspace.ts
ecos/gui/src/applications/editor/: index.ts
ecos/gui/src/applications/editor/core/: COORDINATES.md  Editor.ts  editorCoordinates.test.ts  editorCoordinates.ts  rulerConfig.ts
ecos/gui/src/applications/editor/plugins/: RulerPlugin.ts
ecos/gui/src/applications/editor/tile/: CellDefStore.ts  DrcViolationOverlay.ts  EditManager.ts  GlobalLayerStore.ts  PlacementTool.ts  TileInteraction.ts  TileManager.ts  ViewportAnimator.ts  index.ts  manifest.ts
ecos/gui/src/components/: AIChatPanel.vue  AboutDialog.vue  ChatInspectorPanel.vue  DrawingArea.vue  DrawingToolbar.vue  DrcViolationPanel.vue  LayerPanel.vue  LeftSidebar.vue  MapsGallery.vue  MessageItem.vue  NewProjectWizard.vue  PropertiesPanel.vue  StatusBar.vue  StepConfigPanel.vue  ThumbnailGallery.vue  TopBar.vue  WelcomePage.vue
ecos/gui/src/components/step-config/: GenericStepConfigView.vue  StepConfigDynamicView.vue  StepConfigValueBlock.vue  stepConfigEditor.css  stepConfigLayouts.css
ecos/gui/src/components/step-config/views/: CtsStepConfigView.vue  DrcStepConfigView.vue  FloorplanStepConfigView.vue  PlStepConfigView.vue  RtStepConfigView.vue
ecos/gui/src/composables/: drcStepParser.test.ts  drcStepParser.ts  layoutTilePipeline.test.ts  layoutTilePipeline.ts  requestIdle.ts  stepFlowConfigKeys.ts  useFlowRunner.ts  useFlowStages.ts  useHomeData.ts  useLayoutState.ts  useLayoutTileGen.drcPath.test.ts  useLayoutTileGen.ts  useParameters.test.ts  useParameters.ts  usePdkManager.ts  useStepConfigInfo.ts  useSubflow.ts  useVersion.ts  useWindowResizeState.ts  useWorkspace.ts
ecos/gui/src/stores/: layoutTilePrefetchStore.ts
ecos/gui/src/styles/: index.css
ecos/gui/src/types/: index.ts
ecos/gui/src/utils/: projectFs.ts  sanitizeHtml.test.ts  sanitizeHtml.ts
ecos/gui/src/views/: ConfigureView.vue  ECCView.vue  ECOSView.vue  HomeView.vue  ProjectsView.vue  WorkspaceView.vue  WorkspaceViewWrapper.vue
ecos/scripts/: build-gui.sh  dev-symlinks.sh  prepare-ecos-server.sh
ecos/server/: .gitignore  default.nix  dummy-server.sh  ecos.spec  pyproject.toml  run_server.py
ecos/server/ecos_server/: __init__.py  _log.py  main.py
ecos/server/ecos_server/ecc/: __init__.py
ecos/server/ecos_server/ecc/routers/: __init__.py  sse.py  workspace.py
ecos/server/ecos_server/ecc/schemas/: __init__.py  ecc.py  info.py
ecos/server/ecos_server/ecc/services/: __init__.py  ecc.py  info.py
ecos/server/ecos_server/ecc/sse/: __init__.py  models.py  notify_service.py
ecos/server/ecos_server/sse/: __init__.py  manager.py
ecos/server/hooks/: hook-chipcompiler.py  hook-dreamplace.py
ecos/server/tests/: test_dispatch.py  test_ecos_agent_bridge.py  test_rtl_list_api.py  test_service.py  test_service_pdk_root.py
scripts/: verify-demos-in-docker.sh
