module(
    name = "ecos_studio",
    version = "0.1.0-alpha.5",
)

bazel_dep(name = "rules_shell", version = "0.6.1")

bazel_dep(name = "ecos-bazel")
git_override(
    module_name = "ecos-bazel",
    remote = "https://github.com/Emin017/ecos-bazel.git",
    commit = "db88cd95392ae56e99ceb1cc584eccf3881a2f2f",
)

appimage_tool = use_extension("@ecos-bazel//rules:appimage-tool.bzl", "appimage_tool")
use_repo(appimage_tool, "appimagetool_x86_64_linux")

oss_cad_suite = use_extension("@ecos-bazel//rules:oss_cad_suite.bzl", "oss_cad_suite")
use_repo(oss_cad_suite, "oss_cad_suite", "oss_cad_suite_pruned")
