load("@ecos-bazel//rules:python_packaging.bzl", "python_pyinstaller_bundle")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "build_gui_script",
    srcs = ["build-gui.sh"],
)

sh_binary(
    name = "prepare_ecos_server",
    srcs = ["prepare-ecos-server.sh"],
)

python_pyinstaller_bundle(
    name = "build_ecos_server",
    spec_file = "server/ecos.spec",
    srcs = [
        "server/pyproject.toml",
        "server/run_server.py",
        "server/uv.lock",
    ] + glob([
        "server/ecos_server/**/*.py",
    ]),
    output_name = "ecos-server",
    pyinstaller = "@ecos-bazel//tools:pyinstaller",
)

# Tauri bundle - ChipCompiler specific
genrule(
    name = "ecos_studio_bundle",
    srcs = glob([
        "gui/src/**/*",
        "gui/public/**/*",
        "gui/index.html",
        "gui/package.json",
        "gui/pnpm-lock.yaml",
        "gui/tsconfig*.json",
        "gui/vite.config.ts",
        "gui/tailwind.config.ts",
    ]) + [
        "//ecos/gui/src-tauri:tauri_rust_sources",
        ":build_ecos_server",
        "@appimagetool_x86_64_linux//file",
        "@oss_cad_suite//:all_files",
        "@oss_cad_suite//:yosys_bin",
        ":build_gui_script",
    ],
    outs = ["ecos_studio_bundle/ecos_studio_bundle.tar"],
    local = True,
    cmd = """
        set -euo pipefail

        bash "$(location :build_gui_script)" \\
            --gui-src-dir "$$(dirname $(location gui/package.json))" \\
            --api-server-bin "$(location :build_ecos_server)" \\
            --appimagetool-bin "$(location @appimagetool_x86_64_linux//file)" \\
            --oss-cad-bin "$(location @oss_cad_suite//:yosys_bin)" \\
            --out-tar "$@"
    """,
)
