[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "ecos-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "ecc==0.1.0",
  "fastapi>=0.109",
  "uvicorn>=0.27",
]
[project.optional-dependencies]
dreamplace = ["ecc[dreamplace]==0.1.0"]

[dependency-groups]
dev = [
  "auditwheel>=6",
  "black>=23",
  "mypy>=1",
  "prek>=0.2.20",
  "pyinstaller>=6",
  "pyright>=1.1.407",
  "pytest>=7",
  "pytest-cov>=4",
  "ruff>=0.14.10",
  "ty>=0.0.9"
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
ecc = { path = "../../ecc", editable = true }
torch = { index = "pytorch-cpu" }

[tool.ruff]
line-length = 100
extend-include = ["*.spec"]
lint.select = [
  "B",   # flake8-bugbear
  "E",   # pycodestyle
  "F",   # Pyflakes
  "I",   # isort
  "SIM", # flake8-simplify
  "UP",  # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
# PyInstaller injects SPECPATH, Analysis, PYZ, EXE as builtins at runtime.
"*.spec" = ["F821"]
# sys.path manipulation must precede imports in this entry-point script.
"run_server.py" = ["E402"]

[project.scripts]
ecos-server = "ecos_server.run_server:main"

[tool.hatch.build.targets.wheel]
packages = ["ecos_server"]

[tool.hatch.build.targets.wheel.force-include]
"run_server.py" = "ecos_server/run_server.py"

[tool.ty]
environment.python-version = "3.11"
src.include = [ "ecos_server/**/*.py" ]
