[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "ecos-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "ecc==0.1.0a1",
  "ecc-dreamplace==0.1.0a1",
  "ecc-tools==0.1.0a1",
  "fastapi>=0.109",
  "torch>=1.6.0",
  "uvicorn>=0.27",
]

[dependency-groups]
dev = [
  "auditwheel>=6",
  "black>=23",
  "mypy>=1",
  "prek>=0.2.20",
  "pyinstaller>=6",
  "pyright>=1.1.407",
  "pytest>=7",
  "pytest-cov>=4",
  "ruff>=0.14.10",
  "ty>=0.0.9"
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv]
# Release wheels for ecc-dreamplace and ecc-tools are currently published only as
# manylinux_2_34_x86_64 artifacts, so locking and syncing this server environment
# is intentionally limited to Linux x86_64 with glibc 2.34 or newer.
environments = [
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.uv.sources]
ecc = { url = "https://github.com/openecos-projects/ecc/releases/download/v0.1.0-alpha.1/ecc-0.1.0a1-py3-none-any.whl" }
ecc-dreamplace = { url = "https://github.com/openecos-projects/ecc-dreamplace/releases/download/v0.1.0-alpha.1/ecc_dreamplace-0.1.0a1-py3-none-manylinux_2_34_x86_64.whl" }
ecc-tools = { url = "https://github.com/openecos-projects/ecc-tools/releases/download/v0.1.0-alpha.1/ecc_tools-0.1.0a1-py3-none-manylinux_2_34_x86_64.whl" }
torch = { index = "pytorch-cpu" }

[tool.ruff]
line-length = 100
extend-include = ["*.spec"]
lint.select = [
  "B",   # flake8-bugbear
  "E",   # pycodestyle
  "F",   # Pyflakes
  "I",   # isort
  "SIM", # flake8-simplify
  "UP",  # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
# PyInstaller injects SPECPATH, Analysis, PYZ, EXE as builtins at runtime.
"*.spec" = ["F821"]
# sys.path manipulation must precede imports in this entry-point script.
"run_server.py" = ["E402"]

[project.scripts]
ecos-server = "ecos_server.run_server:main"

[tool.hatch.build.targets.wheel]
packages = ["ecos_server"]

[tool.hatch.build.targets.wheel.force-include]
"run_server.py" = "ecos_server/run_server.py"

[tool.ty]
environment.python-version = "3.11"
src.include = [ "ecos_server/**/*.py" ]
